--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <canvas id="gameCanvas"></canvas>
-  <div id="controls">
-    <div id="joystick"></div>
+  <div id="overlay">
+    <button id="startBtn">Enter Game</button>
     <button id="fireBtn">🔥</button>
     <button id="reloadBtn">🔄</button>
+    <div id="joystick"></div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
