--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
   <div id="overlay">
-    <button id="startBtn">Enter Game</button>
+    <button id="startBtn">🎮 Start</button>
     <button id="fireBtn">🔥</button>
-    <button id="reloadBtn">🔄</button>
     <div id="joystick"></div>
+    <div id="hud">
+      <div id="score">Score: 0</div>
+      <div id="health">Health: 100</div>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="game.js"></script>
