--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="overlay">
-    <button id="startBtn">🎮 Start</button>
-    <button id="fireBtn">🔥</button>
-    <div id="joystick"></div>
-    <div id="hud">
-      <div id="score">Score: 0</div>
-      <div id="health">Health: 100</div>
-    </div>
+  <canvas id="gameCanvas"></canvas>
+  <div id="joystick">
+    <div id="stick"></div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <div id="score">Score: 0</div>
   <script src="game.js"></script>
 </body>
 </html>
